gadjid/src/snapshots/gadjid__test__small-CPDAG08-vs-CPDAG09.snap
---
source: src/lib.rs
expression: "test(g_true, g_guess)"
---
g_true: 20008.CPDAG-10
g_guess: 20009.CPDAG-10
ancestor_aid:
  - 0
  - 0
oset_aid:
  - 0
  - 0
parent_aid:
  - 0
  - 0
shd:
  - 0.8
  - 36
t:
  - 0
  - 1
  - 2
  - 3
  - 5
y: 4
z:
  - 8
possible_descendants_of_t_in_g_guess:
  - 0
  - 1
  - 2
  - 3
  - 4
  - 5
  - 6
  - 7
  - 8
  - 9
not_amenable_in_g_guess_wrt_t:
  - 4
  - 6
  - 7
  - 8
  - 9
proper_ancestors_of_y_in_g_guess_wrt_t:
  - 4
oset_for_t_onto_y_in_g_guess: []
not_validly_adjusted_for_in_g_guess_by_parents_of_t:
  - 4
  - 6
  - 7
  - 8
  - 9
not_validly_adjusted_for_in_g_guess_by_oset_for_t_onto_y:
  - 4
  - 6
  - 7
  - 8
  - 9
not_validly_adjusted_for_in_g_guess_by_empty_set:
  - 4
  - 6
  - 7
  - 8
  - 9
not_validly_adjusted_for_in_g_guess_by_z:
  - 4
  - 6
  - 7
  - 8
  - 9
