gadjid/src/snapshots/gadjid__test__small-CPDAG09-vs-CPDAG10.snap
---
source: src/lib.rs
expression: "test(g_true, g_guess)"
---
g_true: 20009.CPDAG-10
g_guess: 20010.CPDAG-10
ancestor_aid:
  - 0.5666666666666667
  - 51
oset_aid:
  - 0.5666666666666667
  - 51
parent_aid:
  - 0.5666666666666667
  - 51
shd:
  - 0.3333333333333333
  - 15
t:
  - 0
  - 1
  - 2
  - 3
  - 4
  - 7
  - 8
  - 9
y: 5
z:
  - 6
possible_descendants_of_t_in_g_guess:
  - 0
  - 1
  - 2
  - 3
  - 4
  - 5
  - 6
  - 7
  - 8
  - 9
not_amenable_in_g_guess_wrt_t:
  - 5
  - 6
proper_ancestors_of_y_in_g_guess_wrt_t:
  - 5
oset_for_t_onto_y_in_g_guess: []
not_validly_adjusted_for_in_g_guess_by_parents_of_t:
  - 0
  - 5
  - 6
not_validly_adjusted_for_in_g_guess_by_oset_for_t_onto_y:
  - 5
  - 6
not_validly_adjusted_for_in_g_guess_by_empty_set:
  - 5
  - 6
not_validly_adjusted_for_in_g_guess_by_z:
  - 5
  - 6
