gadjid/src/snapshots/gadjid__test__small-CPDAG1-vs-CPDAG2.snap
---
source: src/lib.rs
expression: "test(&format!(\"200{:0>2}.CPDAG-10\", true_id),\n    &format!(\"200{:0>2}.CPDAG-10\", guess_id))"
---
g_true: 20001.CPDAG-10
g_guess: 20002.CPDAG-10
ancestor_aid:
  - 0.4222222222222222
  - 38
oset_aid:
  - 0.4111111111111111
  - 37
parent_aid:
  - 0.5111111111111111
  - 46
shd:
  - 0.5111111111111111
  - 23
T:
  - 1
NAM: []
Y: 4
random_adj:
  - 0
  - 2
  - 6
  - 7
  - 8
proper_ancestors:
  - 4
oset: []
possible_descendants:
  - 1
parent_adjustment_NVA:
  - 3
  - 5
  - 6
  - 9
ancestor_adjustment_NVA:
  - 3
  - 5
  - 6
  - 9
nondescendant_adjustment_NVA:
  - 0
  - 2
  - 3
  - 4
  - 5
  - 6
  - 7
  - 8
  - 9
oset_adjustment_NVA:
  - 3
  - 5
  - 6
  - 9
empty_adjustment_NVA:
  - 3
  - 5
  - 6
  - 9
random_Z_adjustment_NVA:
  - 0
  - 2
  - 3
  - 5
  - 6
  - 7
  - 8
  - 9
