gadjid/src/snapshots/gadjid__test__small-CPDAG10-vs-CPDAG01.snap
---
source: src/lib.rs
expression: "test(g_true, g_guess)"
---
g_true: 20010.CPDAG-10
g_guess: 20001.CPDAG-10
ancestor_aid:
  - 0.43333333333333335
  - 39
oset_aid:
  - 0.43333333333333335
  - 39
parent_aid:
  - 0.5
  - 45
shd:
  - 0.3111111111111111
  - 14
t:
  - 0
  - 1
  - 6
  - 9
y: 2
z:
  - 5
possible_descendants_of_t_in_g_guess:
  - 0
  - 1
  - 3
  - 4
  - 5
  - 6
  - 9
not_amenable_in_g_guess_wrt_t:
  - 3
  - 4
  - 5
proper_ancestors_of_y_in_g_guess_wrt_t:
  - 2
oset_for_t_onto_y_in_g_guess: []
not_validly_adjusted_for_in_g_guess_by_parents_of_t:
  - 1
  - 2
  - 3
  - 4
  - 5
not_validly_adjusted_for_in_g_guess_by_oset_for_t_onto_y:
  - 2
  - 3
  - 4
  - 5
  - 7
not_validly_adjusted_for_in_g_guess_by_empty_set:
  - 2
  - 3
  - 4
  - 5
  - 7
not_validly_adjusted_for_in_g_guess_by_z:
  - 2
  - 3
  - 4
  - 5
  - 7
