gadjid/src/snapshots/gadjid__test__small-CPDAG10-vs-CPDAG11.snap
---
source: src/lib.rs
expression: "test(g_true, g_guess)"
---
g_true: 10-node-CPDAG-10
g_guess: 10-node-CPDAG-11
ancestor_aid:
  - 0.4222222222222222
  - 38
oset_aid:
  - 0.4111111111111111
  - 37
parent_aid:
  - 0.5111111111111111
  - 46
shd:
  - 0.5111111111111111
  - 23
t:
  - 0
  - 1
y: 2
z:
  - 3
  - 7
possible_descendants_of_t_in_g_guess:
  - 0
  - 1
not_amenable_in_g_guess_wrt_t: []
proper_ancestors_of_y_in_g_guess_wrt_t:
  - 2
oset_for_t_onto_y_in_g_guess: []
not_validly_adjusted_for_in_g_guess_by_parents_of_t:
  - 2
  - 3
  - 6
  - 9
not_validly_adjusted_for_in_g_guess_by_oset_for_t_onto_y:
  - 2
  - 3
  - 4
  - 5
  - 6
  - 7
  - 8
  - 9
not_validly_adjusted_for_in_g_guess_by_empty_set:
  - 2
  - 3
  - 4
  - 5
  - 6
  - 7
  - 8
  - 9
not_validly_adjusted_for_in_g_guess_by_z:
  - 2
  - 3
  - 4
  - 5
  - 6
  - 7
  - 8
  - 9
