gadjid/src/snapshots/gadjid__test__small-CPDAG11-vs-CPDAG12.snap
---
source: src/lib.rs
expression: "test(g_true, g_guess)"
---
g_true: 10-node-CPDAG-11
g_guess: 10-node-CPDAG-12
ancestor_aid:
  - 0.37777777777777777
  - 34
oset_aid:
  - 0.3888888888888889
  - 35
parent_aid:
  - 0.5555555555555556
  - 50
shd:
  - 0.4444444444444444
  - 20
t:
  - 1
  - 4
  - 9
y: 7
z:
  - 0
  - 5
possible_descendants_of_t_in_g_guess:
  - 1
  - 4
  - 7
  - 8
  - 9
not_amenable_in_g_guess_wrt_t:
  - 7
  - 8
proper_ancestors_of_y_in_g_guess_wrt_t:
  - 7
oset_for_t_onto_y_in_g_guess: []
not_validly_adjusted_for_in_g_guess_by_parents_of_t:
  - 2
  - 3
  - 5
  - 7
  - 8
  - 9
not_validly_adjusted_for_in_g_guess_by_oset_for_t_onto_y:
  - 0
  - 2
  - 3
  - 5
  - 7
  - 8
not_validly_adjusted_for_in_g_guess_by_empty_set:
  - 0
  - 2
  - 3
  - 5
  - 7
  - 8
not_validly_adjusted_for_in_g_guess_by_z:
  - 0
  - 2
  - 3
  - 5
  - 7
  - 8
