gadjid/src/snapshots/gadjid__test__small-CPDAG12-vs-CPDAG13.snap
---
source: src/lib.rs
expression: "test(g_true, g_guess)"
---
g_true: 10-node-CPDAG-12
g_guess: 10-node-CPDAG-13
ancestor_aid:
  - 0.37777777777777777
  - 34
oset_aid:
  - 0.37777777777777777
  - 34
parent_aid:
  - 0.43333333333333335
  - 39
shd:
  - 0.4666666666666667
  - 21
t:
  - 0
  - 1
  - 3
  - 4
  - 5
  - 6
  - 8
  - 9
y: 2
z:
  - 7
possible_descendants_of_t_in_g_guess:
  - 0
  - 1
  - 2
  - 3
  - 4
  - 5
  - 6
  - 7
  - 8
  - 9
not_amenable_in_g_guess_wrt_t: []
proper_ancestors_of_y_in_g_guess_wrt_t:
  - 2
oset_for_t_onto_y_in_g_guess: []
not_validly_adjusted_for_in_g_guess_by_parents_of_t:
  - 2
  - 5
  - 6
  - 8
  - 9
not_validly_adjusted_for_in_g_guess_by_oset_for_t_onto_y:
  - 2
not_validly_adjusted_for_in_g_guess_by_empty_set:
  - 2
not_validly_adjusted_for_in_g_guess_by_z:
  - 2
  - 7
