gadjid/src/snapshots/gadjid__test__small-CPDAG13-vs-CPDAG14.snap
---
source: src/lib.rs
expression: "test(g_true, g_guess)"
---
g_true: 10-node-CPDAG-13
g_guess: 10-node-CPDAG-14
ancestor_aid:
  - 0.5666666666666667
  - 51
oset_aid:
  - 0.5777777777777777
  - 52
parent_aid:
  - 0.7777777777777778
  - 70
shd:
  - 0.4888888888888889
  - 22
t:
  - 0
  - 2
  - 6
  - 9
y: 8
z:
  - 1
  - 3
  - 4
  - 5
  - 7
possible_descendants_of_t_in_g_guess:
  - 0
  - 1
  - 2
  - 5
  - 6
  - 7
  - 8
  - 9
not_amenable_in_g_guess_wrt_t:
  - 1
  - 8
proper_ancestors_of_y_in_g_guess_wrt_t:
  - 8
oset_for_t_onto_y_in_g_guess: []
not_validly_adjusted_for_in_g_guess_by_parents_of_t:
  - 1
  - 4
  - 5
  - 7
  - 8
  - 9
not_validly_adjusted_for_in_g_guess_by_oset_for_t_onto_y:
  - 1
  - 4
  - 5
  - 7
  - 8
not_validly_adjusted_for_in_g_guess_by_empty_set:
  - 1
  - 4
  - 5
  - 7
  - 8
not_validly_adjusted_for_in_g_guess_by_z:
  - 1
  - 3
  - 4
  - 5
  - 7
  - 8
