gadjid/src/snapshots/gadjid__test__small-CPDAG14-vs-CPDAG15.snap
---
source: src/lib.rs
expression: "test(g_true, g_guess)"
---
g_true: 10-node-CPDAG-14
g_guess: 10-node-CPDAG-15
ancestor_aid:
  - 0.4888888888888889
  - 44
oset_aid:
  - 0.4888888888888889
  - 44
parent_aid:
  - 0.6888888888888889
  - 62
shd:
  - 0.35555555555555557
  - 16
t:
  - 1
  - 3
y: 0
z:
  - 7
  - 8
  - 9
possible_descendants_of_t_in_g_guess:
  - 1
  - 3
not_amenable_in_g_guess_wrt_t: []
proper_ancestors_of_y_in_g_guess_wrt_t:
  - 0
oset_for_t_onto_y_in_g_guess: []
not_validly_adjusted_for_in_g_guess_by_parents_of_t: []
not_validly_adjusted_for_in_g_guess_by_oset_for_t_onto_y: []
not_validly_adjusted_for_in_g_guess_by_empty_set: []
not_validly_adjusted_for_in_g_guess_by_z:
  - 7
  - 8
  - 9
