gadjid/src/snapshots/gadjid__test__small-CPDAG16-vs-CPDAG17.snap
---
source: src/lib.rs
expression: "test(g_true, g_guess)"
---
g_true: 10-node-CPDAG-16
g_guess: 10-node-CPDAG-17
ancestor_aid:
  - 1
  - 90
oset_aid:
  - 1
  - 90
parent_aid:
  - 1
  - 90
shd:
  - 1
  - 45
t:
  - 0
  - 1
  - 2
  - 3
  - 4
  - 5
  - 6
  - 8
y: 9
z:
  - 7
possible_descendants_of_t_in_g_guess:
  - 0
  - 1
  - 2
  - 3
  - 4
  - 5
  - 6
  - 7
  - 8
  - 9
not_amenable_in_g_guess_wrt_t:
  - 7
  - 9
proper_ancestors_of_y_in_g_guess_wrt_t:
  - 9
oset_for_t_onto_y_in_g_guess: []
not_validly_adjusted_for_in_g_guess_by_parents_of_t:
  - 7
  - 9
not_validly_adjusted_for_in_g_guess_by_oset_for_t_onto_y:
  - 7
  - 9
not_validly_adjusted_for_in_g_guess_by_empty_set:
  - 7
  - 9
not_validly_adjusted_for_in_g_guess_by_z:
  - 7
  - 9
